--- a/scss/me_creative.scss
+++ b/scss/me_creative.scss
@@ -55,6 +55,10 @@ body {
     width: $one-column-width;
   }
 }
+.section {
+  margin-left: 10px;
+  margin-right: 10px;
+}
 %align-center {
   max-width: 117rem;
   margin: 0 auto;
@@ -97,6 +101,7 @@ div#block-inspiral-theme-page-title {
       padding: 3rem !important;
       font-size: 1.9rem;
       position: relative;
+      transition: all 0.5s;
       &::after {
         content: "";
         background: $secondary-color;
@@ -107,8 +112,11 @@ div#block-inspiral-theme-page-title {
         left: 0;
         opacity: 0;
       }
-      &:hover::after {
-        opacity: 1;
+      &:hover {
+        color: $secondary-color;
+        &::after {
+          opacity: 1;
+        }
       }
     }
   }
@@ -146,6 +154,7 @@ div#block-inspiral-theme-page-title {
   }
   a {
     color: $color-white;
+    transition: all 0.5s;
     &:hover {
       color: $nav-hover-color;
     }
@@ -169,7 +178,7 @@ div#block-inspiral-theme-page-title {
     display: block;
   }
   .field {
-    padding: 15px 20px;
+    padding: 15px 10px;
     p {
       color: $color-white;
       margin-bottom: 0;
