--- a/css/me_creative.css
+++ b/css/me_creative.css
@@ -5594,9 +5594,9 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 
 .navbar { padding: 0; }
 .navbar-collapse ul li.nav-item a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; position: relative; transition: all 0.5s; }
-.navbar-collapse ul li.nav-item a::after { content: ""; background: #e5191e; width: 100%; height: 2px; position: absolute; bottom: 0; left: 0; opacity: 0; }
+.navbar-collapse ul li.nav-item a::before { content: ""; width: 60px; position: absolute; border-bottom: 2px solid #e5191e; bottom: 0; right: 350px; transition: all 0.7s; }
 .navbar-collapse ul li.nav-item a:hover { color: #e5191e; }
-.navbar-collapse ul li.nav-item a:hover::after { opacity: 1; }
+.navbar-collapse ul li.nav-item a:hover::before { right: 0; }
 
 #header { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; padding: 2px 0; }
 #header img { width: 10rem; }
