--- a/css/me_creative.css
+++ b/css/me_creative.css
@@ -5593,7 +5593,7 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 .top-header .region { display: block; }
 
 .navbar { padding: 0; }
-.navbar-collapse ul li.nav-item a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; position: relative; transition: all 0.5s; }
+.navbar-collapse ul li.nav-item a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; display: block; overflow: hidden; position: relative; transition: all 0.7s; }
 .navbar-collapse ul li.nav-item a::before { content: ""; width: 60px; position: absolute; border-bottom: 2px solid #e5191e; bottom: 0; right: 350px; transition: all 0.7s; }
 .navbar-collapse ul li.nav-item a:hover { color: #e5191e; }
 .navbar-collapse ul li.nav-item a:hover::before { right: 0; }
