--- a/css/me_creative.css
+++ b/css/me_creative.css
@@ -5582,13 +5582,15 @@ body img { width: 100%; }
 
 .container { max-width: inherit; }
 
+.user-guide { display: none; }
+
 div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .block-block-content, div#block-inspiral-theme-page-title { display: none; }
 
 .col { padding-left: 0; padding-right: 0; }
 
 .ui-accordion { padding: 0; }
 
-.top-header .region { display: block; }
+.top-header .region { display: none; }
 
 .navbar { padding: 0; }
 .navbar-collapse ul li.nav-item a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; display: block; overflow: hidden; position: relative; transition: all 0.7s; }
