--- a/scss/custom-variables.scss
+++ b/scss/custom-variables.scss
@@ -107,7 +107,7 @@ $footer-link-color: rgba(225, 225, 225, 0.3);
 
 //* Lingua Myanmar Color Variable
 $primary-color: #000000;
-$secondary-color: #e5191e;
+$secondary-color: #a10000;
 $nav-hover-color: $secondary-color;
 $color-footer-bg: #393939;
 $color-footer-p: #bdbdbd;
