--- a/css/me_creative.css
+++ b/css/me_creative.css
@@ -5604,9 +5604,9 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 .featured-bottom { background: #000000; }
 .featured-bottom .region { max-width: 1170px; margin: 0 auto; display: block; }
 .featured-bottom .field { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; padding: 4rem 0; }
+.featured-bottom h2 { color: #a10000; }
 
 .contact-us { position: relative; }
-.contact-us h2 { color: #a10000; }
 .contact-us p { color: #ffffff; }
 .contact-us a { color: #ffffff; transition: all 0.5s; }
 .contact-us a:hover { color: #a10000; }
