--- a/css/me_creative.css
+++ b/css/me_creative.css
@@ -5601,6 +5601,9 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 #header { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; padding: 2px 0; }
 #header img { width: 10rem; }
 
+#block-views-block-testing-video-slider-block-1 { max-width: 960px; margin: 0 auto; display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: center; justify-content: center; }
+#block-views-block-testing-video-slider-block-1 .item-list, #block-views-block-testing-video-slider-block-1 .list-group { display: block; }
+
 .featured-bottom { background: #000000; }
 .featured-bottom .region { max-width: 1170px; margin: 0 auto; display: block; }
 .featured-bottom .field { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; -ms-flex-pack: distribute; justify-content: space-around; padding: 4rem 0; }
