--- a/scss/me_creative.scss
+++ b/scss/me_creative.scss
@@ -135,11 +135,16 @@ div#block-inspiral-theme-page-title {
 // Videl Slider
 #block-views-block-testing-video-slider-block-1 {
   @include wrapper(960px);
-  @include flexbox;
-  @include justify-content-center;
+  .content {
+    @include flexbox;
+    @include justify-content-center;
+  }
   .item-list,
   .list-group {
     display: block;
+  }
+  h2 {
+    text-align: center;
   }
 }
 
@@ -322,4 +327,9 @@ div#block-inspiral-theme-page-title {
       color: $secondary-color;
     }
   }
+}
+
+//
+article.contextual-region {
+  color: $color-white;
 }
