fixed main menu active color

--- a/scss/me_creative.scss
+++ b/scss/me_creative.scss
@@ -110,8 +110,7 @@ div#block-inspiral-theme-page-title {
           width: 60px;
           position: absolute;
           border-bottom: 2px solid $secondary-color;
-          bottom: 0;
-          right: 350px;
+          right: 0;
           transition: all 0.7s;
         }
       }
