--- a/css/me_creative.css
+++ b/css/me_creative.css
@@ -5595,7 +5595,7 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 .navbar { padding: 0; }
 .navbar-collapse ul li.nav-item a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; display: block; overflow: hidden; position: relative; transition: all 0.7s; }
 .navbar-collapse ul li.nav-item a.is-active { color: #a10000; }
-.navbar-collapse ul li.nav-item a.is-active::before { content: ""; width: 60px; position: absolute; border-bottom: 2px solid #a10000; bottom: 0; right: 350px; transition: all 0.7s; }
+.navbar-collapse ul li.nav-item a.is-active::before { content: ""; width: 60px; position: absolute; border-bottom: 2px solid #a10000; right: 0; transition: all 0.7s; }
 .navbar-collapse ul li.nav-item a::before { content: ""; width: 60px; position: absolute; border-bottom: 2px solid #a10000; bottom: 0; right: 350px; transition: all 0.7s; }
 .navbar-collapse ul li.nav-item a:hover { color: #a10000; }
 .navbar-collapse ul li.nav-item a:hover::before { right: 0; }
