--- a/scss/me_creative.scss
+++ b/scss/me_creative.scss
@@ -202,7 +202,7 @@ div#block-inspiral-theme-page-title {
     content: "";
     width: 2px;
     height: 15rem;
-    background: red;
+    background: $secondary-color;
     position: absolute;
     right: -15rem;
     top: 2.5rem;
