--- a/css/me_creative.css
+++ b/css/me_creative.css
@@ -5648,7 +5648,7 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 .create-left { margin-right: 5rem; }
 
 #block-services { background-image: url("../images/services-bg.jpg"); background-size: cover; background-repeat: no-repeat; }
-#block-services .services { max-width: 960px; margin: 0 auto; padding: 4rem 0; }
+#block-services .services { max-width: 960px; margin: 0 auto; padding: 10rem 0; background: url("../images/dots.png"); background-repeat: no-repeat; background-size: 20%; background-position: right; }
 #block-services .services-wrap { display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; }
 #block-services .services-wrap div:not(:last-child) { margin-right: 10rem; position: relative; }
 #block-services .services-wrap div:not(:last-child)::after { content: ""; width: 1px; height: 12rem; background: #a10000; position: absolute; right: -44px; top: 19px; }
