--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -69,13 +69,14 @@
 #}
 <div id="page-wrapper">
   <div id="page">
-  {% if page.top_header %}
-      <div class="top-header">
+  <div class="top-header">
         <aside class="{{ container }} section clearfix" role="complementary">
           {{ page.top_header }}
         </aside>
       </div>
-    {% endif %}
+  {# {% if page.top_header %}
+      
+    {% endif %} #}
     <header id="header" class="header" role="banner" aria-label="{{ 'Site header'|t}}">
       {% block head %}
         {% if page.secondary_menu or page.top_header or page.top_header_form %}
