--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -69,14 +69,16 @@
 #}
 <div id="page-wrapper">
   <div id="page">
-  <div class="top-header">
+  <div id="social-media" class="role-wrapper">
+      {{ page.social_media}}
+    </div>
+    {% if page.top_header %}
+       <div class="top-header">
         <aside class="{{ container }} section clearfix" role="complementary">
           {{ page.top_header }}
         </aside>
       </div>
-  {# {% if page.top_header %}
-      
-    {% endif %} #}
+    {% endif %}
     <header id="header" class="header" role="banner" aria-label="{{ 'Site header'|t}}">
       {% block head %}
         {% if page.secondary_menu or page.top_header or page.top_header_form %}
@@ -166,7 +168,7 @@
       {% endblock %}
     </div>
     <div id="rates" class="role-wrapper">
-      {{ page.custom_block}}
+      {{ page.custom_block}
     </div>
     {% if page.featured_bottom_first or page.featured_bottom_second or page.featured_bottom_third %}
       <div class="featured-bottom" id="contact-us">
