--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -76,6 +76,9 @@
         </aside>
       </div>
     {% endif %}
+    <div id="social" class="role-wrapper">
+      {{ page.social_header}}
+    </div>
     <header id="header" class="header" role="banner" aria-label="{{ 'Site header'|t}}">
       {% block head %}
         {% if page.secondary_menu or page.top_header or page.top_header_form %}
