--- a/css/me_creative.css
+++ b/css/me_creative.css
@@ -6,9 +6,9 @@ Description: Bootstrap 4 with Sass
  * Font Awesome Free 5.10.1 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
-.fa, .fas, .social-icon, #block-homepage p, .far, .fal, .fad, .fab { -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased; display: inline-block; font-style: normal; font-variant: normal; text-rendering: auto; line-height: 1; }
+.fa, .fas, .social-icon-gmail, .social-icon-phone, #block-homepage p, .far, .fal, .fad, .fab, .social-icon-fb { -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased; display: inline-block; font-style: normal; font-variant: normal; text-rendering: auto; line-height: 1; }
 
-.social-icon, #block-homepage p { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: inline-block; font-style: normal; font-variant: normal; font-weight: normal; line-height: 1; }
+.social-icon-gmail, .social-icon-phone, .social-icon-fb, #block-homepage p { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: inline-block; font-style: normal; font-variant: normal; font-weight: normal; line-height: 1; }
 
 .fa-lg { font-size: 1.33333em; line-height: 0.75em; vertical-align: -.0667em; }
 
@@ -49,8 +49,8 @@ Description: Bootstrap 4 with Sass
 
 .fa-pull-right { float: right; }
 
-.fa.fa-pull-left, .fas.fa-pull-left, .fa-pull-left.social-icon, #block-homepage p.fa-pull-left, .far.fa-pull-left, .fal.fa-pull-left, .fab.fa-pull-left { margin-right: .3em; }
-.fa.fa-pull-right, .fas.fa-pull-right, .fa-pull-right.social-icon, #block-homepage p.fa-pull-right, .far.fa-pull-right, .fal.fa-pull-right, .fab.fa-pull-right { margin-left: .3em; }
+.fa.fa-pull-left, .fas.fa-pull-left, .fa-pull-left.social-icon-gmail, .fa-pull-left.social-icon-phone, #block-homepage p.fa-pull-left, .far.fa-pull-left, .fal.fa-pull-left, .fab.fa-pull-left, .fa-pull-left.social-icon-fb { margin-right: .3em; }
+.fa.fa-pull-right, .fas.fa-pull-right, .fa-pull-right.social-icon-gmail, .fa-pull-right.social-icon-phone, #block-homepage p.fa-pull-right, .far.fa-pull-right, .fal.fa-pull-right, .fab.fa-pull-right, .fa-pull-right.social-icon-fb { margin-left: .3em; }
 
 .fa-spin { animation: fa-spin 2s infinite linear; }
 
@@ -2863,14 +2863,14 @@ readers do not read off random characters that represent icons */
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
 @font-face { font-family: 'Font Awesome 5 Free'; font-style: normal; font-weight: 900; font-display: auto; src: url("../webfonts/fa-solid-900.eot"); src: url("../webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.woff") format("woff"), url("../webfonts/fa-solid-900.ttf") format("truetype"), url("../webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
-.fa, .fas, .social-icon, #block-homepage p { font-family: 'Font Awesome 5 Free'; font-weight: 900; }
+.fa, .fas, .social-icon-gmail, .social-icon-phone, #block-homepage p { font-family: 'Font Awesome 5 Free'; font-weight: 900; }
 
 /*!
  * Font Awesome Free 5.10.1 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
 @font-face { font-family: 'Font Awesome 5 Brands'; font-style: normal; font-weight: normal; font-display: auto; src: url("../webfonts/fa-brands-400.eot"); src: url("../webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-brands-400.woff2") format("woff2"), url("../webfonts/fa-brands-400.woff") format("woff"), url("../webfonts/fa-brands-400.ttf") format("truetype"), url("../webfonts/fa-brands-400.svg#fontawesome") format("svg"); }
-.fab { font-family: 'Font Awesome 5 Brands'; }
+.fab, .social-icon-fb { font-family: 'Font Awesome 5 Brands'; }
 
 /* VARIABLES */
 /* TYPOGRAPHY */
@@ -5592,9 +5592,15 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 
 .top-header .region { display: none; }
 
-.social-icon-gmail::after { font-family: "Font Awesome 5 Free", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f0e0"; }
-.social-icon-fb::after { font-family: "Font Awesome 5 Free", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f39e"; }
-.social-icon-phone::after { font-family: "Font Awesome 5 Free", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f095"; }
+#social-media { max-width: 1170px; margin: 0 auto; padding-top: 2rem; }
+#social-media .row { margin: 0; -ms-flex-pack: end; justify-content: flex-end; }
+
+.social-icon-gmail::after { font-family: "Font Awesome 5 Free", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f0e0"; font-size: 2rem; }
+.social-icon-fb::after { font-family: "Font Awesome 5 Free", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f39e"; font-size: 2rem; }
+.social-icon-phone::after { font-family: "Font Awesome 5 Free", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f095"; font-size: 2rem; }
+.social-icon .social { color: #ffffff; transition: all 0.5s; }
+.social-icon .social svg { display: none; }
+.social-icon .social:hover { color: #a10000; }
 
 .navbar { padding: 0; }
 .navbar-collapse ul li.nav-item a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; display: block; overflow: hidden; position: relative; transition: all 0.7s; }
