--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -76,7 +76,7 @@
         </aside>
       </div>
     {% endif %}
-    <div id="social" class="role-wrapper">
+    <div id="social-media" class="role-wrapper">
       {{ page.social_header}}
     </div>
     <header id="header" class="header" role="banner" aria-label="{{ 'Site header'|t}}">
