--- a/css/me_creative.css
+++ b/css/me_creative.css
@@ -5595,12 +5595,14 @@ div#panels-ipe-content, div#panels-ipe-tray, .item-list, .bs-1col .bs-region .bl
 #social-media { max-width: 1170px; margin: 0 auto; padding-top: 2rem; }
 #social-media .row { margin: 0; -ms-flex-pack: end; justify-content: flex-end; }
 
-.social-icon-gmail::after { font-family: "Font Awesome 5 Free", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f0e0"; font-size: 2rem; }
-.social-icon-fb::after { font-family: "Font Awesome 5 brands", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f39e"; font-size: 2rem; }
-.social-icon-phone::after { font-family: "Font Awesome 5 Free", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f095"; font-size: 2rem; }
+.social-icon-gmail, .social-icon-phone, .social-icon-fb { font-size: 2rem; cursor: pointer; }
+.social-icon-gmail::after { font-family: "Font Awesome 5 Free", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f0e0"; }
+.social-icon-fb::after { font-family: "Font Awesome 5 brands", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f39e"; }
+.social-icon-phone::after { font-family: "Font Awesome 5 Free", "Pyidaungsu-Regular", "Arial", sans-serif; content: "\f095"; }
 .social-icon .social { color: #ffffff; transition: all 0.5s; }
 .social-icon .social svg { display: none; }
 .social-icon .social:hover { color: #a10000; }
+.social-icon .social:not(:last-child) { margin-right: 1.5rem; }
 
 .navbar { padding: 0; }
 .navbar-collapse ul li.nav-item a { color: #ffffff; padding: 3rem !important; font-size: 1.9rem; display: block; overflow: hidden; position: relative; transition: all 0.7s; }
