--- a/css/responsive-custom.css
+++ b/css/responsive-custom.css
@@ -11,3 +11,4 @@ h1, h2 { font-family: NeurialGrotesk-Medium, "Pyidaungsu-Bold", "Arial", sans-se
 
 /* CUSTOM STARTS HERE
 --------------------------------------------------*/
+@media only screen and (min-width: 1025px) { .navbar-expand-lg .navbar-toggler { display: none; } }
